geom/src/sql/Tests/geom_geometry.stable.err.Five
stderr of test 'geom_geometry` in directory 'src/sql` itself:


# 21:15:13 >  
# 21:15:13 >  Mtimeout -timeout 180 Mserver "--config=/ufs/niels/scratch/monetdb/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4:/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4/lib:/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4/bin" --set "gdk_dbfarm=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/dbfarm" --set "sql_logdir=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/sql_logs" --set "xquery_logdir=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/xquery_logs" --set mapi_port=36438 --set xrpc_port=48112 --set monet_prompt= --trace "--dbname=mTests_src_sql" --dbinit="module(geom);module(sql_server); module(sql_server);" ; echo ; echo Over..
# 21:15:13 >  


# 21:15:13 >  
# 21:15:13 >  Mtimeout -timeout 60 MapiClient -lsql -umonetdb -Pmonetdb --host=localhost --port=36438 
# 21:15:13 >  

MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('LINESTRING(10 10)');
ERROR = !MALException:wkb.FromText:!ERROR: IllegalArgumentException: point array must contain 0 or >1 elements
        !ERROR: IllegalArgumentException: point array must contain 0 or >1 elements
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('LINESTRING(10)');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected number but encountered ')'
        !ERROR: ParseException: Expected number but encountered ')'
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('LINESTRING()');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected number but encountered ')'
        !ERROR: ParseException: Expected number but encountered ')'
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('LINESTRING');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('POINT(10)');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected number but encountered ')'
        !ERROR: ParseException: Expected number but encountered ')'
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('POINT()');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected number but encountered ')'
        !ERROR: ParseException: Expected number but encountered ')'
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('POINT');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO geoms values ('');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream

# 21:57:03 >  
# 21:57:03 >  Done.
# 21:57:03 >  

